--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/informalIntroduction/__init__.py=utf-8
+encoding//src/informalIntroduction/modules/__init__.py=utf-8
